# mkdockyard

./: .gitignore  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
src/mkdockyard/: main.py
